<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madoriginal.CutomerMenu"
    android:backgroundTint="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="358dp"
            android:layout_height="250dp"
            android:layout_marginTop="352dp"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/vidshow"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:backgroundTint="#E43166"
                android:text="@string/Pianochords"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/lycshow"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:backgroundTint="#571A9C"
                android:onClick="showlyrics"
                android:text="@string/Lyrics"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/gutshow"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:backgroundTint="#E33266"
                android:text="@string/Guitarchords"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sgbshow"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:backgroundTint="#57199B"
                android:text="@string/Suggestionbox"
                android:textSize="12sp"
                android:textStyle="bold"
                app:iconPadding="8dp" />

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="197dp"
            android:layout_height="47dp"
            android:backgroundTint="#323131"
            android:text="@string/Contributerlogin"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.942" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="405dp"
            android:layout_height="349dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.088"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>